Added normal generation and subdivision options, readme, and example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 2.8)
 project(vtk2pov)
+
+add_executable(vtk2pov vtk2pov.cpp)
 
 find_package(VTK)
 include(${VTK_USE_FILE})
@@ -10,16 +12,21 @@ Error:" ;
 "VTK was not found. Set VTK_DIR in your cache."
 )
 endif()
+include_directories(${VTK_INCLUDE_DIRS})
+target_link_libraries(vtk2pov ${VTK_LIBRARIES})
 
-#find_package(Boost COMPONENTS program_options)
-#if (NOT Boost_FOUND)
-#message(FATAL_ERROR
-#"
-#Error:" ;
-#"Boost was not found. Set BOOST_ROOT in your cache."
-#)
-#endif()
+set(ENABLE_BOOST OFF CACHE BOOL "Enable boost support")
+if (ENABLE_BOOST)
+find_package(Boost COMPONENTS program_options)
+if (NOT Boost_FOUND)
+message(FATAL_ERROR
+"
+Error:" ;
+"Boost was not found. Set BOOST_ROOT in your cache."
+)
+endif()
+add_definitions(-DENABLE_BOOST)
+include_directories(${Boost_INCLUDE_DIRS})
+target_link_libraries(vtk2pov ${Boost_LIBRARIES})
+endif()
 
-include_directories(${Boost_INCLUDE_DIRS} ${VTK_INCLUDE_DIRS})
-add_executable(vtk2pov vtk2pov.cpp)
-target_link_libraries(vtk2pov ${VTK_LIBRARIES} ${Boost_LIBRARIES})
